# EngineGL

./: .gitignore  .gitmodules  .nvimrc  2  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/src/: Application.cpp  Application.h  CMakeLists.txt  Camera2D.cpp  Camera2D.h  Engine.h  Entrypoint.h  GLSLProgram.cpp  GLSLProgram.h  GLTexture.cpp  GLTexture.h  IOManager.cpp  IOManager.h  ImGuiLayer.cpp  ImGuiLayer.h  ImageLoader.cpp  ImageLoader.h  InputManager.cpp  InputManager.h  Layers.cpp  Layers.h  Log.cpp  Log.h  ResourceManager.cpp  ResourceManager.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  TextureCache.cpp  TextureCache.h  Timing.cpp  Timing.h  Window.cpp  Window.h
Engine/src/Events/: ApplicationEvent.hpp  CMakeLists.txt  Events.hpp  KeyEvent.hpp  MouseEvent.hpp
Engine/src/Renderer/: CMakeLists.txt  ElementBuffer.cpp  ElementBuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  Renderer.cpp  Renderer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexLayout.cpp  VertexLayout.h
Sandbox/: CMakeLists.txt
Sandbox/res/shaders/: colorshading.frag  colorshading.vert  simpleshader.frag  simpleshader.vert
Sandbox/src/: CMakeLists.txt  ExampleLayer.cpp  ExampleLayer.h  MainGame.cpp  MainGame.h
res/shaders/: colorshading.frag  colorshading.vert
src/: CMakeLists.txt  GLSLProgram.cpp  GLSLProgram.h  GLTexture.h  ImageLoader.h  Log.h  MainGame.cpp  MainGame.h  ResourceManager.h  Sprite.cpp  Sprite.h  TextureCache.cpp  main.cpp
